Fix titles on small screens

--- a/components/Title/Title.module.css
+++ b/components/Title/Title.module.css
@@ -8,6 +8,7 @@
 	opacity: 1;
 	mix-blend-mode: difference;
 	pointer-events: auto;
+	white-space: nowrap;
 
 	@media $(medium) {
 		--top-offset: $TITLE_OFFSET_WHEN_MEDIUM;
